<?xml version="1.0"?>
<package format="2">
    <name>o_calibration</name>
    <version>0.0.0</version>
    <description>Wimble Robotics robot "O" calibrary package</description>
    <maintainer email="mike@wimblerobotics.com">Michael Wimble</maintainer>
    <license>MIT</license>
    <url type="website">https://github.com/wimblerobotics/o/wiki</url> -->
    <author email="mike@wimblerobotics.com">Michael Wimble</author> -->

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_srvs</build_depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>o_msgs</depend>
    <depend>rosconsole</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
    <!-- Other tools can request additional information be placed here -->
    </export>
</package>
