<?xml version="1.0"?>
<package format="2">
    <name>o_hardware</name>
    <version>0.0.0</version>
    <description>Wimble Robotics robot "O" motor controller package</description>
    <maintainer email="mike@wimblerobotics.com">Michael Wimble</maintainer>
    <license>MIT</license>
    <url type="website">https://github.com/wimblerobotics/o/wiki</url> -->
    <author email="mike@wimblerobotics.com">Michael Wimble</author> -->

    <buildtool_depend>catkin</buildtool_depend>
    <depend>controller_interface</depend>
    <depend>controller_manager</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>geometry_msgs</depend>
    <depend>hardware_interface</depend>
    <depend>joint_limits_interface</depend>
    <depend>message_runtime</depend>
    <depend>nav_msgs</depend>
    <depend>o_msgs</depend>
    <depend>rosconsole</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>transmission_interface</depend>
    <depend>urdf</depend>
</package>
