<?xml version="1.0" ?>
<package format="2">
    <name>o_msgs</name>
    <version>1.3.0</version>
    <description>Wimble Robotics robot "O" custom messages</description>
    <maintainer email="mike@wimblerobotics.com">pi</maintainer>
    <license>MIT</license>
    <url type="website">https://github.com/wimblerobotics/o/wiki</url>
    <author email="mike@wimblerobotics.com">Michael Wimble</author>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>geometry_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>std_msgs</depend>

    <export></export>
</package>