<?xml version="1.0"?>
<package format="2">
  <name>o_teensy</name>
  <version>0.0.0</version>

  <description>Wimble Robotics robot "O" monitor package</description>
  <maintainer email="mike@wimblerobotics.com">Michael Wimble</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/wimblerobotics/o/wiki</url>
  <author email="mike@wimblerobotics.com">Michael Wimble</author>

  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libboost-thread-dev</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>libboost-thread-dev</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>libboost-thread-dev</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
